
test_sources = test/gsttest.c

bin_PROGRAMS = gsttest
gsttest_CC = @CC@
gsttest_SOURCES = $(test_sources)

gsttest_CFLAGS = $(AM_CFLAGS) $(GSTREAMER_CFLAGS) $(GSTREAMER_BASE_CFLAGS) $(GSTREAMER_APP_CFLAGS) $(GSTREAMER_AUD_CFLAGS) $(GIO_CFLAGS)
gsttest_LDFLAGS = $(GSTREAMER_LIBS) $(GSTREAMER_BASE_LIBS) $(GSTREAMER_APP_LIBS) $(GSTREAMER_AUD_CFLAGS) $(GIO_LIBS)
